--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -45,7 +45,7 @@
             <tr>
               <th>#</th>
               <th>Entreprise</th>
-              <th>Date d'ajout</th>
+              <th>Date de publication</th>
               <th>Statut</th>
               <th>Secteur d'activité</th>
               <th>Région</th>
