--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -18,7 +18,7 @@
           <div class="col-md-4">
             <select class="selectpicker form-control " id="type-rateplan" title="Tous les types" data-style="btn-solid">
               <option value="">Tous les types</option>
-              <option value="sereine">Sereine</option>
+              <option value="serein">Serein</option>
               <option value="premium">Premium</option>
               <option value="standard">Standard</option>
             </select>
@@ -53,11 +53,11 @@
               <th>Poste occupé</th>
               <th>Position</th>
               <th>Type</th>
-              <th>Date limite</th>
+              <th>Date limite candidature</th>
               <th>Date de publication</th>
+              <th>Mode de diffusion</th>
               <th>Statut</th>
               <th>Entreprise</th>
-              <th>Région</th>
               <th class="no-sort">Action</th>
             </tr>
           </thead>
