--- a/src/app/directives/offers/rate-plan/rate-plan.component.html
+++ b/src/app/directives/offers/rate-plan/rate-plan.component.html
@@ -19,15 +19,15 @@
                   <select class="form-control" name="type" [(ngModel)]="type">
                     <option value="standard">Standard</option>
                     <option value="premium">Premium</option>
-                    <option value="sereine">Sereine</option>
+                    <option value="serein">Serein</option>
                   </select>
                   <!-- <span class="help-block mt-2">This is some placeholder block-level help text for the above input.</span> -->
                 </div>
               </div>
-  
+
             </div>
           </div>
-  
+
         </div>
         <div class="modal-footer justify-content-between bg-primary-50">
           <div>
@@ -39,4 +39,3 @@
       </form>
     </div>
   </div>
-  
