--- a/src/app/dashboard/company/company-edit/company-edit.component.html
+++ b/src/app/dashboard/company/company-edit/company-edit.component.html
@@ -66,6 +66,15 @@
 
         <div class="row">
           <div class="col-sm-6 form-group mb-4">
+            <label class="font-bold">Téléphone Fix</label>
+            <input class="form-control form-control-solid" name="phone" [(ngModel)]="editor.phone" type="text"
+                   placeholder="Numero fixe" [ngClass]="{'no-access': authService.getRole() === 'editor' || authService.getRole() === 'contributor'}" autocomplete="off">
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-sm-6 form-group mb-4">
             <label class="font-bold">Numéro de téléphone</label>
             <div class="mb-2" ngModelGroup="cellphones" #cellphonesCtrl="ngModelGroup">
               <div class="input-group" *ngFor="let cellphone of editor.cellphones; let i = index">
