Rendre clickable la reference des candidat

--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="row">
-          <table class="table table-bordered table-hover" id="orders-table">
+          <table class="table table-bordered table-hover" id="candidate-table">
             <thead class="thead-default thead-lg">
               <tr>
                 <th>#</th>
