Ajouter une section pour l'historique du paiement

--- a/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
+++ b/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
@@ -20,6 +20,7 @@
                 <select class="form-control" name="position" [value]="position" [(ngModel)]="position" data-style="btn-solid">
                   <option value="0">Aucun</option>
                   <option value="1">A la une</option>
+                  <option value="2">Dans la liste</option>
                 </select>
               </div>
             </div>
