--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -35,6 +35,13 @@
           <small class="menu-item-text">Voir les entreprise</small>
         </div>
       </a>
+      <a [routerLink]="['/history']" routerLinkActive="router-link-active"><i
+        class="la la-history menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Historique de paiement
+          </h5>
+        </div>
+      </a>
       <a [routerLink]="['/offer-lists']" routerLinkActive="router-link-active"><i
         class="la la-clipboard menu-item-icon"></i>
         <div>
