Update paiement history

--- a/src/app/dashboard/paiement-history/paiement-history.component.html
+++ b/src/app/dashboard/paiement-history/paiement-history.component.html
@@ -10,6 +10,7 @@
             <th>#ID</th>
             <th>Client</th>
             <th>Article</th>
+            <th>Reference</th>
             <th>Moyen de paiement</th>
             <th>Statut de paiement</th>
             <th>Date de création</th>
