--- a/src/app/index/login/login.component.html
+++ b/src/app/index/login/login.component.html
@@ -46,7 +46,7 @@
   <div class="text-center">
     <span class="auth-head-icon"><i class="la la-user"></i></span>
   </div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="ibox-body">
+  <form [formGroup]="Form" (ngSubmit)="onSubmit()" class="ibox-body">
     <h4 class="font-strong text-center mb-5">Connexion</h4>
 
     <div *ngIf="error" class="alert alert-pink alert-dismissable fade show alert-outline">
