--- a/src/app/dashboard/formations/formation-edit/formation-edit.component.html
+++ b/src/app/dashboard/formations/formation-edit/formation-edit.component.html
@@ -11,7 +11,8 @@
         {{Editor.title}}
         <div *ngIf="Editor.status === 'pending'"><span class="badge badge-pill badge-warning"> En attente de
             validation</span></div>
-        <div *ngIf="Editor.status === 'publish' && !Editor.activation"><span class="badge badge-pill badge-pink">Formation
+        <div *ngIf="Editor.status === 'publish' && !Editor.activation"><span
+            class="badge badge-pill badge-pink">Formation
             désactiver</span></div>
       </h5>
       <div class="row">
@@ -20,8 +21,8 @@
             <div class="row">
               <div class="form-group mb-4 col-sm-8">
                 <label class="font-bold">Titre du formation </label>
-                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.title" required type="text" name="title"
-                  placeholder="Titre de l'offre">
+                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.title" required
+                  type="text" name="title" placeholder="Titre de l'offre">
               </div>
             </div>
             <div class="row">
@@ -34,15 +35,15 @@
             <div class="row">
               <div class="form-group mb-4 col-sm-6">
                 <label class="font-bold">Durée de la formation </label>
-                <input class="form-control form-control-solid" [(ngModel)]="Editor.duration" required type="text" name="duration"
-                  placeholder="Durée">
+                <input class="form-control form-control-solid" [(ngModel)]="Editor.duration" required type="text"
+                  name="duration" placeholder="Durée">
               </div>
             </div>
             <div class="row">
               <div class="form-group mb-4 col-sm-6">
                 <label class="font-bold">Prix de formation </label>
-                <input class="form-control form-control-solid" [(ngModel)]="Editor.price" required type="text" name="price"
-                       placeholder="Prix de formation en Ariary">
+                <input class="form-control form-control-solid" [(ngModel)]="Editor.price" required type="text"
+                  name="price" placeholder="Prix de formation en Ariary">
               </div>
             </div>
             <div class="row">
@@ -60,8 +61,8 @@
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
                 <label class="font-bold">Adresse de l'établissement</label>
-                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.address" required type="text" name="address"
-                  placeholder="Adresse de létablissement">
+                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.address" required
+                  type="text" name="address" placeholder="Adresse de létablissement">
               </div>
             </div>
             <div class="row">
@@ -86,8 +87,9 @@
                 <label class="font-bold">Date limite d'inscription</label>
                 <div class="input-group date">
                   <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
-                  <input class="form-control" name="date_limit" required format="dd/mm/yyyy" appDatepicker readonly="readonly"
-                    [(ngModel)]="Editor.date_limit" [value]="Editor.date_limit" type="text" placeholder="Date limite de publication">
+                  <input class="form-control" name="date_limit" required format="dd/mm/yyyy" appDatepicker
+                    readonly="readonly" [(ngModel)]="Editor.date_limit" [value]="Editor.date_limit" type="text"
+                    placeholder="Date limite de publication">
                 </div>
               </div>
               <div class="col-sm-6 from-group">
@@ -103,8 +105,8 @@
               <div class="col-sm-12">
                 <div class="form-group mb-4">
                   <label class="font-bold">Description</label>
-                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Editor.description"
-                    name="description" [init]="tinyMCESettings">
+                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required
+                    [(ngModel)]="Editor.description" name="description" [init]="tinyMCESettings">
                   </editor>
                 </div>
               </div>
@@ -124,31 +126,76 @@
               <div class="ibox-title">Candidats inscrits</div>
             </div>
             <div class="ibox-body">
-              <div class="text-center" *ngIf="loadingSubscription">Changement ...</div>
-              <div class="text-center" *ngIf="Subscriptions.length === 0 && !loadingSubscription">Aucun candidat</div>
+              <div class="text-center" *ngIf="Subscriptions.length === 0">Aucun candidat</div>
               <ul class="media-list media-list-divider mr-2 scroller" data-height="400px">
                 <li class="media align-items-center" *ngFor="let subscription of Subscriptions">
                   <div class="media-body d-flex align-items-center">
                     <div class="flex-1">
                       <div class="media-heading">
-                        <a [routerLink]="[ '/candidate', subscription.candidate.ID ]" target="_blank">{{ subscription.candidate.title }}</a>
+                        <a [routerLink]="[ '/candidate', subscription.candidate.ID ]"
+                          target="_blank">{{ subscription.candidate.title }}</a>
                         <span class="badge badge-pill badge-default" *ngIf="subscription.paid === 0"> En attente</span>
                         <span class="badge badge-pill badge-pink" *ngIf="subscription.paid === 2">Refuser</span>
                         <span class="badge badge-pill badge-success" *ngIf="subscription.paid === 1">Accepter</span>
                       </div>
-                      <small class="text-muted">{{subscription.candidate.privateInformations.firstname}} {{subscription.candidate.privateInformations.lastname}}</small>
+                      <small class="text-muted">{{subscription.candidate.privateInformations.firstname}}
+                        {{subscription.candidate.privateInformations.lastname}}</small>
                     </div>
                     <button type="button" class="btn btn-sm btn-outline-secondary btn-rounded"
-                    (click)="acceptedUser(subscription.candidate, 1, $event)" *ngIf="subscription.paid === 0" [disabled]="loadingSubscription">Accepter</button>
+                      (click)="registerUser(subscription.candidate, 1, $event)" *ngIf="subscription.paid === 0"
+                      [disabled]="loadingSubscription">Accepter</button>
                     <button type="button" class="btn btn-sm btn-outline-warning btn-rounded ml-2"
-                    (click)="acceptedUser(subscription.candidate, 2, $event)" *ngIf="subscription.paid === 0" [disabled]="loadingSubscription">Refuser</button>
+                      (click)="registerUser(subscription.candidate, 2, $event)" *ngIf="subscription.paid === 0"
+                      [disabled]="loadingSubscription">Refuser</button>
                   </div>
                 </li>
 
               </ul>
             </div>
+            <div class="ibox-footer">
+              <div class="">
+                <button class="btn btn-sm btn-primary" (click)="openSubscriptionForm()">Envoyer par mail</button>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!--  Affiche le formulaire d'envoie d'email au formateur -->
+  <div class="modal fade" id="subscription-email-modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header px-4 py-3 bg-primary-400">
+          <div>
+            <h5 class="modal-title text-white">Envoyer un mail au formateur</h5>
+          </div>
+          <button class="close text-white" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="subEmailForm" (ngSubmit)="onSendSubscriber()">
+            <div class="p-4">
+              <div class="row">
+                <div class="col-12">
+                  <label>Objet</label>
+                  <input formControlName="subject" class="form-control" />
+                </div>
+                <div class="col-12 mt-4">
+                    <label>Message</label>
+                    <textarea class="form-control" rows="6" formControlName="message" ></textarea>
+                  </div>
+              </div>
+            </div>
+
+            <div class="modal-footer justify-content-between bg-primary-50">
+              <button class="btn btn-primary  mr-3" type="submit">Envoyer</button>
+            </div>
+          </form>
+        </div>
+
       </div>
     </div>
   </div>
