Fix disabled bouton

--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -170,7 +170,7 @@
               </div>
               <div class="row mt-4">
                 <div class="col-12">
-                  <button class="btn btn-outline-pink btn-sm btn-square" (click)="editCompany($event)" [disabled]="authService.getRole() !== 'adminitrator'">Modifier
+                  <button class="btn btn-outline-pink btn-sm btn-square" (click)="editCompany($event)" [disabled]="authService.getRole() !== 'administrator'">Modifier
                     l'entreprise</button>
                 </div>
               </div>
