--- a/src/app/dashboard/ads/ads.component.html
+++ b/src/app/dashboard/ads/ads.component.html
@@ -24,11 +24,11 @@
               <tr>
                 <th>#</th>
                 <th>Titre</th>
-                <th>Start</th>
-                <th>End</th>
+                <th>Debut</th>
+                <th>Fin</th>
                 <th>Position</th>
                 <th>Date d'ajout</th>
-                <th class="no-sort">Action</th>
+                <th class="no-sort"></th>
               </tr>
               </thead>
             </table>
