--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -55,7 +55,7 @@
               <div>
                 <h3 class="m-0">Analyse des visiteurs</h3>
               </div>
-              <ul class="nav nav-pills nav-pills-rounded nav-pills-air" id="chart_tabs">
+              <ul class="nav nav-pills nav-pills-rounded nav-pills-air" id="chart_tabs" *ngIf="false">
                 <li class="nav-item ml-1">
                   <a class="nav-link active" data-toggle="tab" data-id="1" href="javascript:;">Cette semaine</a>
                 </li>
